# libmint

./: .gitignore  CMakeLists.txt  README.md  entry_stub.c  mylog.txt
.circleci/: config.yml
cmake/: MintConfig.cmake
examples/: CMakeLists.txt  loggo_example.c
libs/: REQUIREMENTS.md  loggo.h  mint.h  mint_ezemu.h  mint_loggo.h
scripts/: install.bash
tests/: CMakeLists.txt
